--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -164,7 +164,7 @@ One of the most direct ways in which citizens can produce policy is through pure
 
 We seek to determine how voters use information when asked to vote directly on a supposedly non-partisan, technical policy proposal placed on a ballot initiative. Are voters able to distinguish between the different levels of information quality and bias that stem from varying sources of information? Relatedly, do ballot initiatives actually lead to less interference from parties and special interests, or are voters equally swayed by special interests cues and objective policy research? 
 
-We propose a field experiment examining voting outcomes on a citizen initiated ballot proposition following randomized treatment of proposition endorsement or opposition by special interest groups and policy experts during the 2020 California elections. We seek to test whether citizens acting as policy makers give more credence to high quality policy research versus overtly partisan or biased information (i.e. special interests). In addition, we will replicate our field experiment with a survey experiment using identical subjects and treatments.
+We propose a field experiment examining voting outcomes on a citizen initiated ballot proposition following randomized treatment of proposition endorsement or opposition by special interest groups and policy experts during the 2020 California elections. We seek to test whether citizens acting as policy makers give more credence to high quality policy research versus overtly partisan or biased information (i.e. special interests). In addition, we will replicate our field experiment with a survey experiment using identical subjects and treatments in order to test for replicability and/or illuminate additional mechanisms. 
 
 The paper will also contribute to the growing literature on the effect of campaign outreach on vote choice. Meta-analysis by \citet{kalla2018minimal} suggests that the effect of campaign contact and advertising on voting outcomes is close to zero in general elections. However, effects do seem to appear in non-partisan ballot measure campaigns, but few experiments exist on this topic. Moreover, all existing ballot initiative experiments contacted voters through a single advocacy group with a clear policy position. We know little about whether the quality and/or source of the information provided changes the efficiency of these messages. 
 
@@ -177,34 +177,28 @@ The paper will also contribute to the growing literature on the effect of campai
 
 \subsection{Science, research and democracy}  \label{sec: democracy}
 
-This project speaks to broader theoretical questions on the functioning of our current democracies, and in particular the potential gaps between reality and the ideals of deliberative democracies. We hope to contribute to ongoing discussions within philosophy of science, such as perceptions of research methods and consumption of scientific evidence outside of the academy. \\
-
+This project speaks to broader theoretical questions on the functioning of our current democracies, and in particular the potential gaps between reality and the ideals of deliberative democracies. We hope to contribute to ongoing discussions within philosophy of science, such as perceptions of research methods and consumption of scientific evidence outside of the academy.
 
 \subsection{Ballot initiatives and direct democracy}
 
 Direct democracy at the US state-level is extremely prevalent yet understudied. 31 of 50 states permit referendums of some kind, and 24 permit citizen initiatives \citep{leduc2003politics}. Of these 24 states, California engages in more individual exercises of direct democracy than any other. Since 1912 California has voted on 376 ballot initiatives at the statewide level, with a sharp rise over the past 20 years, with 139 propositions on the ballot since 1995 (only Oregon comes close to matching these numbers).
 
-\bigbreak
-
-Some scholars view this growth of direct democracy as a positive extension of democratic values, providing citizens with a much-needed voice in policy making and politics. Defenders of ballot initiatives claim that they provide a way for citizens to voice their opinions and produce policies with less interference from parties and special interests \citep{cronin1999direct}. They allow the collective intelligence of the people in politics \citep{landemore2012many} to lead to better decisions. 
-
-Empirically, participation in ballot initiatives is associated with an increased capacity to correctly answer factual questions about politics \citep{smith2002ballot}. There is also some evidence that voters are responsive to some types of information (synthesis of a Citizen Assembly held on the topic received in their voters pamphlets) \citep{carman2015effectiveness}. 
-
-\bigbreak
+Some scholars view this growth of direct democracy as a positive extension of democratic values, providing citizens with a much-needed voice in policy making and politics. Defenders of ballot initiatives claim that they provide a way for citizens to voice their opinions and produce policies with less interference from parties and special interests \citep{cronin1999direct}. They allow the collective intelligence of the people in politics \citep{landemore2012many} to lead to better decisions. Empirically, participation in ballot initiatives is associated with an increased capacity to correctly answer factual questions about politics \citep{smith2002ballot}. There is also some evidence that voters are responsive to some types of information (synthesis of a Citizen Assembly held on the topic received in their voters pamphlets) \citep{carman2015effectiveness}. 
 
 Others contend that the initiative process in the United States has been captured by special interest groups, directly undermining the increased power ballot initiatives are designed to deliver to citizens \citep{stratmann2004effectiveness, rosenbluth2018responsible}. Doubts about voters' competency are also central to whether ballot initiatives lead to adoption of good policies \citep{achen2017democracy}. The need for technical knowledge may be larger on a ballot initiative than in a traditional partisan election as fewer heuristic cues are available. 
-%[CITE MORE - SEE LEDUC]. 
 
-This implies that the outcomes of direct democracy are no more democratic than representative democracy, as the same elite manipulation can operate in both domains. This hypothesis is contested, however, with some observational empirical work showing a null or even negative effect of special interest spending on initiative outcomes \citep{gerber1999populist}. Our research design allows us to evaluate the special interest capture theory by comparing the efficacy of special interest messages to those of independent policy analysts.
+This implies that the outcomes of direct democracy may be no more democratic than representative democracy, as the same elite manipulation can operate in both domains. This hypothesis is contested, however, with some observational empirical work showing a null or even negative effect of special interest spending on initiative outcomes \citep{gerber1999populist}. Our research design allows us to evaluate the special interest capture theory by comparing the efficacy of special interest messages to those of independent policy analysts.
 
-Ballot initiatives have also been identified as a source of major policy blunders. One of the most notorious of these blunders is California's Proposition 13 of 1978, which capped annual increases of real property taxes to 2 percent per year and prohibited governments from increasing property taxes without a further referendum. Proposition 13 has been blamed for underfunding of California public schools, contributing to California's housing crisis, and perpetuating income inequality in the state \citep{wasi2005property, catterall1985proposition}. Proposition 13 was not without its critics at the time of passage, with critics contending that ``Proposition 13 raises serious questions about the feasibility of participatory democracy in a policy area which commonly has been dominated by experts'' \citep{mccaffery1978participatory}. In this context, our experimental design allows us to test whether voters are receptive to expert policy analysis of ballot referendum policies. 
+Ballot initiatives have also been identified as a source of policy blunders. One of the most notorious is California's Proposition 13 of 1978, which capped annual increases of real property taxes to 2 percent per year and prohibited governments from increasing property taxes without a further referendum. Proposition 13 has been blamed for underfunding of California public schools, contributing to California's housing crisis, and perpetuating income inequality in the state \citep{wasi2005property, catterall1985proposition}. Proposition 13 was not without its critics at the time of passage, with critics contending that ``Proposition 13 raises serious questions about the feasibility of participatory democracy in a policy area which commonly has been dominated by experts'' \citep{mccaffery1978participatory}. In this context, our experimental design allows us to test whether voters are receptive to expert policy analysis of ballot referendum policies. 
 
 In line with the partisan and special interest capture theories, as well as evidence that ballot initiatives often lead to policy blunders, our primary hypothesis is that \textit{voters will be equally swayed by information from special interest groups and policy researchers.} More formally, we expect the absolute value of special interest and policy research treatment effects to be statistically indistinguishable from one another.
 
 
 \subsection{Current experimental evidence}  \label{sec: contact experiments}
 
-A growing body of literature contends that information provision is relatively unsuccessful at changing voting outcomes. The primary conclusion of the Metaketa 1 project---which sought to determine if politicians were rewarded for positive information and punished for negative information---was that ``the overall effect of information [provision] across all studies is quite precisely estimated---and not statistically distinguishable from zero'' \citep{dunning2018metaketa}. \citet{incerti2019corruption} draws a similar conclusion in a meta-analysis of corruption information field experiments, finding no voter punishment of allegedly corrupt politicians across field experiments. In the US context, a meta-analysis by \citet{kalla2018minimal} suggests that the effect of campaign contact and advertising on voting outcomes is close to zero in general elections.
+A growing body of literature contends that information provision is relatively unsuccessful at changing voting outcomes. The primary conclusion of the Metaketa 1 project---which sought to determine if politicians were rewarded for positive information and punished for negative information---was that ``the overall effect of information [provision] across all studies is quite precisely estimated---and not statistically distinguishable from zero'' \citep{dunning2018metaketa}. In the US context, a meta-analysis by \citet{kalla2018minimal} suggests that the effect of campaign contact and advertising on voting outcomes is close to zero in general elections.
+
+%\citet{incerti2019corruption} draws a similar conclusion in a meta-analysis of corruption information field experiments, finding no voter punishment of allegedly corrupt politicians across field experiments.
 
 However, \citet{kalla2018minimal} find suggestive evidence that campaign contact produces positive effects on vote choice in ballot measure campaigns (see \autoref{fig: kb_meta}). While their meta-analysis includes 23 ballot initiative experiments, these experiments stem from 5 total projects \citep{arceneaux2005using, arceneaux2010comparing, rogers2015ballot}. All of these projects use advocacy groups to contact voters with a pro-initiative message via canvassing, phone, or mail. The existence of positive treatment effects in the ballot initiative environment begs the question of what kinds of informational campaigns are successful. Does high quality policy research persuade voters, or is special interest contact equally effective? 
 
@@ -299,26 +293,23 @@ We are still gathering data on the number of precincts and their population in C
 
 \subsection{Why conduct a survey experiment?} \label{sec: questions}
 
-Conducting a survey experiment in complement of the field experiment will provide at least two benefits: (i) substantially, explore some potential mechanisms and (ii) methods wise, contribute to the growing literature on the replicability of survey experiments results in the field. 
+Conducting a survey experiment in complement of the field experiment will provide at least two benefits: (i) to explore potential mechanisms and (ii) to contribute to the growing literature on the replicability of survey experiments results in the field. 
 
-Substantially, a survey experiment allows us to add a set of outcome variables: in addition to asking participants whether they would vote yes or no on the issue, we could ask them basic factual questions on the policy topic. If we find differences in our primary outcome (voting decision), adding this second set of outcomes could help us test whether this difference in voting can be partly explained by a difference in the understanding of the issue. 
-\citet{knobloch2014empowering} study the impact of a Citizen Assembly in Oregon and the presence of a synthesis of the Assembly in the voters pamphlets. A state-wide survey shows that voters seemed to read and appreciate the synthesis, and they conduct a survey experiment to show that the synthesis lead to higher knowledge level on the issue than other sources of information (interest group, neutral informational by government). But they do not study vote as the outcome variable of interest, and do not have a field experiment. 
-\bigbreak
-A second reason to do a survey experiment is to contribute to a methods question. A growing literature suggests that survey experimental results often do not replicate in the field. By contrast, we hypothesize that survey experiments should better approximate the context of ballot initiatives as: (1) the vote choices are real ballot propositions rather than hypothetical candidates, and (2) partisan cues are less prevalent in (technical) ballot proposals. The ballot initiative setting would allow us to design the survey so that it exactly replicates the field setting, with the only differences being hypothetical vote choice versus actual.
+Substantively, a survey experiment allows us to add additional outcome variables. In addition to asking participants whether they would vote yes or no on the issue, we could ask them basic factual questions on the policy topic. If we find differences in our primary outcome (voting decision), adding this second set of outcomes could help us test whether this difference in voting can be partly explained by a difference in the understanding of the issue. \citet{knobloch2014empowering} study the impact of a Citizen Assembly in Oregon and the presence of a synthesis of the Assembly in the voters pamphlets. A state-wide survey shows that voters seemed to read and appreciate the synthesis, and they conduct a survey experiment to show that the synthesis lead to higher knowledge level on the issue than interest group or government-provided information). %But they do not study vote as the outcome variable of interest, and do not have a field experiment. 
+
+Methodologically, a growing literature suggests that survey experimental results often do not replicate in the field. By contrast, we hypothesize that survey experiments should better approximate the context of ballot initiatives as: (1) the vote choices are real ballot propositions rather than hypothetical candidates, and (2) partisan cues are less prevalent in (technical) ballot proposals. The ballot initiative setting would allow us to design the survey so that it exactly replicates the field setting, with the only differences being hypothetical vote choice versus actual.
  
-Whether our hypothesis is correct or incorrect, we will contribute to the growing understanding of the contexts and questions in which survey experiments replicate or do not replicate in the real world. If our hypothesis is correct, we can open the door for more survey experiments with more varied and ambitious treatments. If our hypothesis is incorrect, we show that survey experiments do not replicate even in a context where they closely approximate the field environment.
+Whether our hypothesis is correct or incorrect, we will contribute to the growing understanding of the contexts and questions in which survey experiments replicate in the real world. If our hypothesis is correct, we can open the door for more survey experiments with more varied and ambitious treatments. If our hypothesis is incorrect, we show that survey experiments do not replicate even in a context where they closely approximate the field environment.
 
 \subsection{Design} \label{sec: questions}
 
 The ballot initiative setting would allow us to create a survey experiment in which the subjects, treatment, and outcome variable are identical to those in the field setting. In other words, we could sample from the same population, use the same informational treatments that would be sent to voters in the field setting, and measure the same outcome---vote choice---with the exception that the outcome is real in the field setting and hypothetical in the survey setting. We would then simply add a set of basic factual questions as a second set of outcomes. 
 
-
-
 \section{Natural experiment} \label{sec:natural}
 
 We are keeping the possibility of conduction a natural experiment on this topic open at this point, even though we have not found a specific workable design yet. The idea would be to use a real-life variation of information supply (such as data on billboards or a report sent to some precincts). The information provision will very likely not be random in this case, but we could rely on methods such as differences and differences to measure the effect of information provision on an outcome measure to be defined (vote on other measures, in previous elections, early voting, opinion polls). 
 
-We could also potentially leverage the signature requirement thresholds to put a ballot initiative on the ballot as a discontinuity (arguing that proposals just below the threshold are substantially the same as proposals just above the threshold, and measuring the causal effect of putting a proposal to a vote through a RD design. This would probably be another project, however, since we do not see how we can use information provision as a treatment in that case. 
+We could also potentially leverage the signature requirement thresholds to put a ballot initiative on the ballot as a discontinuity (arguing that proposals just below the threshold are substantially the same as proposals just above the threshold, and measuring the causal effect of putting a proposal to a vote through a RD design. %This would probably be another project, however, since we do not see how we can use information provision as a treatment in that case. Turnout may represent a possible outcome variable is such a discontinuity, testing if increases in the number of ballot initiatives cause more voters to go to the polls. 
 
 
 
