Refocused on survey expe + details on treatments
Changed the code to update list of approved proposals, but connection with file in folder doesn't work.
Don't want to change the whole file path, so let's discuss when we can

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -197,3 +197,14 @@
   year={1985},
   publisher={The University of Chicago Press}
 }
+
+@article{reilly2011ballot,
+  title={Ballot question readability and roll-off: The impact of language complexity},
+  author={Reilly, Shauna and Richey, Sean},
+  journal={Political Research Quarterly},
+  volume={64},
+  number={1},
+  pages={59--67},
+  year={2011},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
